tests/failing/test_increment.js
let i = 0;
i++;
console.log("i is now: " + i);
i--;
console.log("i is now: " + i);
